# rustful

./: Cargo.toml  README.md
src/: dispatcher.rs  lib.rs  request_parser.rs  route_rover.rs  server.rs
src/example/: example.rs
src/models/: request.rs  response.rs  route.rs
